syntax = "proto3";

package jobworkerp.service;

import "jobworkerp/service/common.proto";
import "jobworkerp/data/worker_schema.proto";


message CreateWorkerSchemaResponse {
    jobworkerp.data.WorkerSchemaId id = 1; // generated id
}

message OptionalWorkerSchemaResponse {
    optional jobworkerp.data.WorkerSchema data = 1;
}

service WorkerSchemaService {
  rpc Create(jobworkerp.data.WorkerSchemaData) returns (CreateWorkerSchemaResponse);
  rpc Update(jobworkerp.data.WorkerSchema) returns (SuccessResponse);
  rpc Delete(jobworkerp.data.WorkerSchemaId) returns (SuccessResponse);
  rpc Find(jobworkerp.data.WorkerSchemaId) returns (OptionalWorkerSchemaResponse);
  rpc FindList(FindListRequest) returns (stream jobworkerp.data.WorkerSchema);
  rpc Count(CountCondition) returns (CountResponse);
}